# tonton

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  makefile  requirements.txt
app/src/: main.cpp
apps/: CMakeLists.txt
apps/agent_cli/: CMakeLists.txt
apps/agent_cli/src/: agent_cli.cc
apps/localisation/: CMakeLists.txt
apps/localisation/include/: agent.h  localisation.pb.h  localisation_server.h
apps/localisation/src/: agent.cc  localisation.grpc.pb.cc  localisation_server.cc
apps/server_cli/: CMakeLists.txt
apps/server_cli/src/: server_cli.cc
apps/visualiser/: CMakeLists.txt
apps/visualiser/include/: visualiser.h
apps/visualiser/src/: visualiser.cc
libs/localisation/: CMakeLists.txt
libs/localisation/include/: agent.h  localisation.grpc.pb.h  localisation_server.h
libs/localisation/src/: agent.cc  localisation.pb.cc  localisation_server.cc
protos/: localisation.proto
